# GenerativeAINotes

./: pyproject.toml
installs/: dep.sh
notes/: markmap.mm.md
outputs/: test.html
