[tool.poetry]
name = "MINDMAPS"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.12.0"
pyarrow = "^18.0.0"
diagrams = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
